tablas en latex del proyecto

--- a/Ficha-2011_bsm.tex
+++ b/Ficha-2011_bsm.tex
@@ -3,6 +3,7 @@
 \usepackage[spanish]{babel}
 %Maldito arial 12
 \usepackage[utf8]{inputenc}
+
 %changing the deafult fonts
 \usepackage{textcomp}
 \renewcommand{\rmdefault}{phv}
@@ -59,7 +60,7 @@
 \vglue -2cm
 \renewcommand{\arraystretch}{1.28}
 \noindent
-\hspace{-0.5cm}\begin{tabularx}{1.059\linewidth}{|c|Y|c|c|c|}\hline
+\hspace{-0.0cm}\begin{tabularx}{1.059\linewidth}{|c|Y|c|c|c|}\hline
  \multirow{4}{*}{\parbox[b]{3cm}{\vspace{0.1cm}\centering\includegraphics[scale=0.3]{udea}\\
 \scriptsize{{\fontfamily{ptm}\selectfont Universidad de Antioquia}}\\
 \tiny{{\fontfamily{ptm}\selectfont Vicerrectoría de Investigación}}
@@ -88,29 +89,70 @@ La ficha técnica es el resumen del proyecto, con una extensión máxima de seis
 
 \renewcommand{\arraystretch}{1.71}
 \noindent
-\hspace{-0.5cm}\begin{tabularx}{1.059\linewidth}{|l|l|}\hline
-\multicolumn{2}{|Y|}{\cellcolor[gray]{.8}\textbf{Implicaciones de una simetría $U(1)_H$ en experimentos de rayos cósmicos y de aceleradores}}\\\hline
-\multicolumn{2}{|Y|}{}\\\hline
-\cellcolor[gray]{.8}\textbf{Facultad, Escuela o Instituto}&Facultad de Ciencias Exactas y Naturales\\\hline
-\cellcolor[gray]{.8}\textbf{Grupo que avala el proyecto}& Fenomenología de Interacciones Fundamentales (GFIF)\\\hline
-\cellcolor[gray]{.8}\textbf{Código Colciencias del Grupo si aplica}&COL0008423\\\hline
-\cellcolor[gray]{.8}\textbf{Nombre del Investigador Principal}&Diego A. Restrepo Qunitero\\\hline
-\cellcolor[gray]{.8}\textbf{Nombre del Coinvestigador}&William Ponce\\\hline
-\cellcolor[gray]{.8}\textbf{Documento de Identidad N${}^{\text{\textbf{o}}}$}&98554575\\\hline
-\cellcolor[gray]{.8}\textbf{Convocatoria}&Sostenibilidad 2009-2010 de GFIF\\\hline
+\hspace{-0.0cm}\begin{tabularx}
+{1.059\linewidth}{|l|l|}\hline
+\cellcolor[gray]{.8}\textbf{Título completo del proyecto}&\\\hline
+\multicolumn{2}{|Y|}{\cellcolor[gray]{.8}\textbf{Seleccione el área de conocimiento más cercana a su investigación en la que se inscribe el proyecto}}
+%\multicolumn{2}{|Y|}{}\\\hline
+\end{tabularx}
+%\hspace{-0.5cm}\begin{tabular}
+%{|l|l|l|l|l|l|}\hline
+%\renewcommand{\tabcolsep}{0.6cm}
+\hspace{-0.5cm}\begin{tabularx}
+{1.059\linewidth}{|p{3.59cm}|p{1.5cm}|p{3.59cm}|p{1.6cm}|p{3.59cm}|p{1.5cm}|}\hline
+Ciencias Agrarias &  &Ciencias Exactas y de la Tierra  & &Ingenierías &\\ \hline
+Ciencias Biológicas &  &Ciencias Humanas  & &Lingüística Letras y Artes & \\ \hline
+Ciencias de la Salud &  &Ciencias Sociales Aplicadas  & &Otros. Indique cuál & \\ 
+ \end{tabularx}
+%\end{tabular}\
+\hspace{-0.5cm}\begin{tabularx}
+{1.059\linewidth}{|Y|Y|}\hline
+\cellcolor[gray]{.8}\textbf{Centro de investigación que tramita el proyecto}&Facultad de Ciencias Exactas y Naturales\\\hline
+\cellcolor[gray]{.8}\textbf{Grupo de investigación que avala el proyecto}& Fenomenología de Interacciones Fundamentales (GFIF)\\\hline
+\cellcolor[gray]{.8}\textbf{Código Colciencias del Grupo}&COL0008423\\\hline
+\cellcolor[gray]{.8}\textbf{Última clasificación Colciencias}&\hspace{-0.2cm}\vline año: \\\hline
+\cellcolor[gray]{.8}\textbf{Programa académico que apoya el proyecto*}&William Ponce\\\hline
+\cellcolor[gray]{.8}\textbf{Nombre del investigador principal}&98554575\\\hline
+\cellcolor[gray]{.8}\textbf{Documento de identidad}&Sostenibilidad 2009-2010 de GFIF\\\hline
+\cellcolor[gray]{.8}\textbf{Dependencia del investigador principal}&18 meses\\\hline
+\cellcolor[gray]{.8}\textbf{Convocatoria a la que se presenta}&18 meses\\\hline
 \cellcolor[gray]{.8}\textbf{Duración del proyecto (en meses)}&18 meses\\\hline
+\cellcolor[gray]{.8}\textbf{Resumen del presupuesto en millones}&18 meses\\\hline
 \end{tabularx}
-
-\vspace{-0.02cm}
-\renewcommand{\arraystretch}{1.038}
+%\multicolumn{3}{c|}{{\large Actualización}}\
+\vspace{0.5cm}
+\renewcommand{\arraystretch}{1.5}
 \noindent
-\hspace{-0.5cm}\begin{tabularx}{1.059\linewidth}{|l|r|}
-\multicolumn{2}{|Y|}{\cellcolor[gray]{.8}\textbf{DATOS DEL PRESUPUESTO}}\\[7pt]\hline
-\textbf{Recursos propios del Grupo}\hspace{6.2cm}\quad&{\$ 14,000,000,\footnotesize{00}}\\\hline
-\textbf{Universidad} \footnotesize{(recursos en especie y recursos  frescos)}&{\$ 43,750,000\footnotesize{00}}\\\hline
-\textbf{Otras entidades} \footnotesize{(si aplica):}&{\$ 0,\footnotesize{00}}\\\hline
-\textbf{Valor total del proyecto:}&{\$ 57,750,000,\footnotesize{00}}\\\hline
-\end{tabularx}
+\centering
+%\renewcommand{\arrayrulewidth}{1pt}
+\hspace{0.5cm}\begin{tabular}{|p{3.2cm}|p{3.05cm}|p{3.2cm}|p{3.2cm}|p{3.2cm}|}
+\hline
+\cellcolor[gray]{.8}\textbf{\hspace{0.8cm}Rubros} &\multicolumn{3}{l|}{\cellcolor[gray]{.8}\textbf{\hspace{1.5cm}FUENTES DE FINANCIACIÓN}}&\cellcolor[gray]{.8}\textbf{\hspace{0.8cm}Total}\\
+\cline{2-4}
+\cellcolor[gray]{.8}\textbf{}&\cellcolor[gray]{.89}\textbf{\hspace{0.8cm}CODI} &\cellcolor[gray]{.89}\textbf{APORTE U. DE A.indique la dependencia o grupo de investigación} &\cellcolor[gray]{.89}\textbf{APORTE EXTERNO. indique la entidad} &\cellcolor[gray]{.8}\textbf{}\\
+\hline
+\end{tabular}
+\hspace{-0.5cm}\begin{tabularx}
+{1.059\linewidth}{|p{3.18cm}|p{3.06cm}|p{3.22cm}|p{3.11cm}|p{3.28cm}|p{3.39cm}|}
+Personal &  &  & & &\\ \hline
+Pasantias &  &  & & & \\ \hline
+Jóvenes inv. Colciencias &  &  & & & \\ \hline
+Eventos &  &  & & &\\ \hline
+Servicios Técnicos &  &  & & &\\ \hline
+Material fungibles &  &  & & &\\ \hline
+Equipos&  &  & & &\\ \hline
+Telecomunicaciones &  &  & & &\\ \hline
+Trabajo de campo &  &  & & &\\ \hline
+Software &  &  & & &\\ \hline
+Publicaciones &  &  & & &\\ \hline
+Bibliografía &  &  & & &\\ \hline
+ \end{tabularx}
+\hspace{0.5cm}\begin{tabular}{|p{3.2cm}|p{3.05cm}|p{3.2cm}|p{3.19cm}|p{3.2cm}|}
+\hline
+\cellcolor[gray]{.8}\textbf{\hspace{0.8cm}Total} &\cellcolor[gray]{.8}\textbf{}&\cellcolor[gray]{.8}\textbf{}&\cellcolor[gray]{.8}\textbf{}&\cellcolor[gray]{.8}\textbf{0\$}\\
+\hline
+ \end{tabular}
+
 \renewcommand{\arraystretch}{1}
 
 \begin{center}
@@ -231,7 +273,7 @@ Ver documento adjunto
 
 
 
-%%% Local Variables: 
+%%% Local Variables:
 %%% mode: latex
 %%% TeX-master: Ficha-2011_bsm
-%%% End: 
+%%% End:
