Planteamiento del Problema changes

--- a/Ficha-2011_bsm.tex
+++ b/Ficha-2011_bsm.tex
@@ -53,6 +53,11 @@
 {\begingroup}{ \medskip \endgroup}
 \excludecomment{evaluacion}
 
+\includecomment{proyecto}
+\specialcomment{proyecto}
+{\begingroup}{\endgroup}
+
+
 
 \begin{document}
 
