--- a/Planteamiento_del_Problema.tex
+++ b/Planteamiento_del_Problema.tex
@@ -8,24 +8,114 @@
   quiere responder en el contexto del problema planteado.
 \end{instrucciones}
 %Tesis
-El modelo estándar de las interacciones fundamentales ha sido muy exitoso durante las últimas décadas para explicar la mayoría de los resultados experimentales de física de altas energías. Sin embargo, simultáneamente se ha venido acumulando evidencia experimental que requiere extender el modelo estándar con nuevas partículas.  En éste proyecto se explorarán diferentes extensiones del modelo estándar que explican estos datos y se obtendrán predicciones concretas en experimentos presentes y futuros.
+El modelo estándar de las interacciones fundamentales ha sido muy
+exitoso durante las últimas décadas para explicar la mayoría de los
+resultados experimentales de física de altas energías. Sin embargo,
+simultáneamente se ha venido acumulando evidencia experimental que
+requiere extender el modelo estándar con nuevas partículas. En la
+actualidad hay un gran esfuerzo experimental para explorar en detalle
+todas esas posibilidades. Estamos ahora en una época de efervescencia
+experimental con detectores de partículas instalados desde las alturas
+de satelites artificiales, hasta las profundidades de laboratorios
+subterráneos a kilometros de profundidad. 
+
+El Large Hadron Collider (LHC), en un tunel a 100 metros de profundidad y
+con una circunferencia de 27 Km, es el primer acelerador
+protón--protón que puede probar la escala del TeV.  Posee cuatro
+detectores, dos de los cuales están especialmente diseñados para
+encontrar señales de nueva física. El LHC finalmente ha comenzado a
+tomar datos en el 2010, aunque hasta el 2012 lo hará a la mitad de la
+energía para la cual fue diseñado.
+
+Desde el 2008 varios experimentos sobre rayos cósmicos como ATIC
+\cite{:2008zzr} y los satélites PAMELA \cite{Adriani:2008zr} y
+Fermi--LAT \cite{Abdo:2009zk}, han venido reportando un exceso en el
+flujo de electrones y positrones en rayos cósmicos. Estos resultados
+han dado lugar a un sinnúmero de publicaciones tratando de explicar su
+origen. Ya se han comenzado a reportar las primeras medidas de rayos
+gamma por parte de Fermi--LAT, las cuales pueden ayudar a discernir si
+el origen de las anomalías detectadas en electrones y positrones es
+debida a fuentes astrofísicas como pulsares cercanos, o a la
+aniquilación o el decaimiento de materia oscura. El detector de rayos
+cósmicos AMS-02~\cite{ams:2009}, que será instalado en la estación
+espacial internacional, medirá el espectro de antiprotones y
+positrones en un rango de energía mucho más amplio y con una
+estadística mucho mejor.  
+
+El satélite Planck fue lanzado en mayo, y
+desde julio se encuentra en pleno funcionamiento.  Con los datos
+obtenidos de este experimento se espera medir la radiación cósmica de
+fondo con mucha más precisión que su antecesor WMAP. 
+
+%hablar sobre XENON basado en la discusión de 1104.3572
+Los experimentos de detección directa de materia oscura instalados en
+laboratorios subterráneos como XENON100 \cite{1104.3121}, han comenzado a explorar las
+regiones predichas por algunos de los modelos más estudiados de
+materia oscura. Para los próximos años se espera cubrir todo el espacio de parámetros para materia oscura del modelo estándar supersimétrico mínimo restringido (Constrained MSSM de sus siglas en Inglés)
+
+Finalmente hay varios experimentos de física de neutrinos en marcha
+que esperan mejorar los datos actuales de oscilaciones de neutrinos.
+
+
+En éste proyecto se explorarán diferentes extensiones del modelo
+estándar que explican estos datos y se obtendrán predicciones
+concretas en los experimentos presentes y futuros mencionados
+anteriormente.
 
 %evidencia 1
-La principal evidencia de necesidad de física más allá del modelo estándar se halla en las medidas de las oscilaciones de neuiontrinos, que a través de muchos experimentos diferentes han logrado establecer que los neutrinos tienen masa y se mezclan entre sí. Si la masa de neutrinos es total o parcialmente explicada por métodos radiativos, no sólo es posible dar cuenta de la pequeñez de las masas de los neutrinos con respecto a la de los otros fermiones, sino también, que modelos de este tipo pueden hacer predicciones muy concretas en aceleradores de partículas, como el LHC. Aún en el caso de modelos tan estudiados de este tipo, como es el caso del modelo supersimétrico con violación bilineal de paridad R, quedan muchos aspectos que explorar. 
+La principal evidencia de necesidad de física más allá del modelo
+estándar se halla en las medidas de las oscilaciones de neutrinos,
+que a través de muchos experimentos diferentes han logrado establecer
+que los neutrinos tienen masa y se mezclan entre sí. Si la masa de los
+neutrinos es total o parcialmente explicada por métodos radiativos, no
+sólo es posible dar cuenta de la pequeñez de sus masas con respecto a
+la de los otros fermiones, sino también, hacer predicciones muy
+concretas en aceleradores de partículas, como el LHC. Aún en el caso
+de modelos tan estudiados de este tipo, como es el caso del modelo
+supersimétrico con violación bilineal de paridad R, quedan muchos
+aspectos que explorar.
 
 %evidencia 2
-En los últimos tiempos, sobre todos después de las medidas de precisión de WMAP, el satelite de la NASA que ha medido con mucha precisión la radiación cósmica de fondo, se ha venido estableciendo la necesidad de una forma de materia compuesta por partículas  débilmente interactuantes (WIMPs de sus siglas en inglés) que se conoce como materia oscura. Esta forma el 22\% de la materia del Universo. Sin embargo, aún no se ha encontrado evidencia directa de la existencia de dicha partícula, y existen modelos incluso donde dicho tipo de materia podría ser indetectable.
+En los últimos tiempos, sobre todos después de las medidas de
+precisión de WMAP, el satelite de la NASA que ha medido con mucha
+precisión la radiación cósmica de fondo, se ha venido estableciendo la
+necesidad de una forma de materia compuesta por partículas débilmente
+interactuantes (WIMPs de sus siglas en inglés) que se conoce como
+materia oscura. Esta forma el 22\% de la materia del Universo. Sin
+embargo, aún no se ha encontrado evidencia directa de la existencia de
+dicha partícula. Hay mucha expectativa de lo que pueda encontrar el
+LHC o los experimentos de detección directa a corto y mediano plazo.
 
 %evidencia 3
-La materia oscura puede ser estable o con un tiempo de vida mucho mayor que la edad del Universo. En el caso de materia oscura inestable se esperan señales fuertes en los detectores de rayos cósmicos instalados en satélites artificiales que orbitan la tierra como Fermi-LAT y PAMELA, y en los detectores futuros como AMS-02~\cite{ams:2009}, el cual será instalado en la estación espacial internacional.  De hecho, recientemente se ha encontrado un exceso en positrones que se podría explicar con una partícula de materia oscura que decae principalmente a leptones con una vida media de unos $10^{26}$ seg.
+La materia oscura puede ser estable o con un tiempo de vida mucho
+mayor que la edad del Universo. En el caso de materia oscura inestable
+se esperan señales fuertes en los detectores de rayos cósmicos
+instalados en satélites artificiales que orbitan la tierra como
+Fermi-LAT y PAMELA, y en los detectores futuros como
+AMS-02~\cite{ams:2009}. De hecho, recientemente se ha encontrado un
+exceso en positrones \cite{Adriani:2008zr} que se podría explicar con
+una partícula de materia oscura que decae principalmente a leptones
+con una vida media de unos $10^{26}$ seg.
 
 %evidencia 4
-Las observaciones astronómicas sugieren que el Universo está compuesto en su mayor parte de materia. En el contexto del big-bang, esto implica que en algún momento grandes cantidades de materia y antimateria se aniquilaron dejando el pequeño exceso de materia que constituye el Universo observable actual. El problema de explicar el exceso inicial de materia sobre antimateria se conoce con el nombre de bariogenesis. Con el modelo estándar no es posible explicar bariogénesis.  
+Las observaciones astronómicas sugieren que el Universo está compuesto
+en su mayor parte de materia. En el contexto del big-bang, esto
+implica que en algún momento grandes cantidades de materia y
+antimateria se aniquilaron dejando el pequeño exceso de materia que
+constituye el Universo observable actual. El problema de explicar el
+exceso inicial de materia sobre antimateria se conoce con el nombre de
+bariogénesis. Con el modelo estándar no es posible explicar
+bariogénesis.
 
 %conclusion
-Un modelo ideal sería uno que de cuenta de las masas y mezclas de neutrinos, tenga un candidato a materia oscura que sirva para explicar el exceso de positrones en experimentos de rayos cósmicos y a la vez contenga los ingredientes para explicar bariogenesis. En este proyecto pretendemos formular un modelo de éstas características, además queremos continuar explorando otros posibles modelos que puedan dar cuenta de alguna de las observaciones que requieren un extensión del modelo estándar.
-
-
+Un modelo ideal sería uno que de cuenta de las masas y mezclas de
+neutrinos, tenga un candidato a materia oscura que sirva para explicar
+el exceso de positrones en experimentos de rayos cósmicos y a la vez
+contenga los ingredientes para explicar bariogenesis. En este proyecto
+pretendemos formular un modelo de éstas características, además
+queremos continuar explorando otros posibles modelos que puedan dar
+cuenta de alguna de las observaciones que requieren una extensión del
+modelo estándar.
  
 
 \subsection{Marco teórico}
@@ -34,18 +124,166 @@ Un modelo ideal sería uno que de cuenta de las masas y mezclas de neutrinos, te
  CODI: ¿Es la teoría actualizada y acertada con respecto al problema que se va a estudiar? ¿Su formulación es coherente? ¿Es clara la perspectiva teórica desde donde se ubica el problema?
 \end{instrucciones}
 
-En el grupo nos hemos enfocado en extensiones del modelo estándar que dan cuenta de las masas y mezclas de neutrinos. Hemos estudiado exhaustivamente las predicciones del modelo bilineal con ruptura de paridad R en el Tevatron y el LHC \cite{hep-ph/0304232,hep-ph/0501153,DeCampos:2010yu,deCampos:2008ic,deCampos:2008re,deCampos:2007bn}. La metodología desarrollada la hemos aplicado a otros modelos de generación radiativa de masas de neutrinos con nuevas partículas a la escala del TeV asequibles en el LHC \cite{Sierra:2008wj,AristizabalSierra:2006ri}. Recientemente hemos comenzado a explorar modelos que puedan dar cuenta simultáneamente de masas de neutrinos y candidatos de materia oscura \cite{Hirsch:2005ag,Choi:2010jt,Sierra:2008wj}. Nuestro grupo \cite{Nardi:2008ix} fue uno de los primeros en proponer una explicación en términos de materia oscura inestable para explicar el exceso de positrones observado por el satelite PAMELA en el 2008\cite{Adriani:2008zr}. Luego hemos construido un modelo basado en supersimetría con ruptura de paridad R para explicar la preferencia por decaimientos leptónicos de la partícula de materia oscura, que en este caso es el neutralino. Para ello se ha implementado una simetría horizontal que permite sólo la presencia de acoplamientos trilineales leptónicos \cite{Sierra:2009zq}. En un proyecto en marcha estamos explorando la posibilidad opuesta de un candidato de materia oscura que decae sólo hadrónicamente. La simetría horizontal garantiza que sólo los acoplamientos trilineales de quarks derechos estén permitidos. Finalmente hemos extendido el modelo para incluir masas de neutrinos.
+%comentar sobre una simetría Z_2
+La partícula de materia oscura puede ser estable, o inestable con un
+tiempo de vida mucho más grande que la edad del Universo. En el primer
+caso usualmente se impone una simetría adicional $Z_2$ bajo la cual
+las partículas del modelo estándar son pares, mientras que las
+partículas nuevas son impares. Este tipo de simetría garantiza que la
+partícula impar más liviana es estable y, de ser neutra, constituye un
+buen candidato de materia oscura. En el programa computacional
+microMEGAS~\cite{Belanger:2006is} se puede implementar cualquier
+extensión del modelo estándar que posea una simetría $Z_2$ para
+calcular numéricamente la densidad de reliquia de materia oscura y la
+sección eficaz WIMP--nucleón, relevante para los experimentos de
+búsquedas directas. Cuando la partícula de materia oscura es inestable
+se requiere de alguna simetría para garantizar que su acoplamiento a
+las partículas del modelo estándar esté suficientemente suprimido. 
 
-
-%Actualmente se encuentra funcionado el acelerador Tevatron que acelera protones y antiprotones a una energía de 1 TeV, y se espera que siga funcionado por 2 años más. 
-A finales de este año se espera que entre en funcionamiento el acelerador LHC. Este acelerará protones en ambos sentidos a una energía que alcanzará hasta los 14 TeV. 
-%La mayoría de los experimentos conducidos son hechos en grandes instrumentos llamados detectores. Por ejemplo el LHC tiene 4 detectores. Dos ellos ATLAS y CMS, son detectores de propósito general donde se espera explorar señales de nueva física.
-Desde el año pasado varios experimentos sobre rayos cósmicos como ATIC \cite{:2008zzr} y los satélites PAMELA \cite{Adriani:2008zr} y Fermi--LAT \cite{Abdo:2009zk}, han venido reportando un exceso en el flujo de electrones y positrones en rayos cósmicos. Estos resultados han dado lugar a un sinnúmero de publicaciones tratando de explicar su origen. En los próximos meses se esperan medidas de rayos gamma por parte de Fermi--LAT, las cuales pueden ayudar a discernir si el origen de las anomalías detectadas en electrones y positrones es debida a fuentes astrofísicas como pulsares cercanos, o a la aniquilación o el decaimiento de materia oscura. El detector de rayos cósmicos AMS-02~\cite{ams:2009},  que será instalado en la Estación Espacial  internacional, medirá el espectro de antiprotones y positrones en un rango de energía mucho más amplio y con una estadística mucho mejor.
-El satélite Planck fue lanzado en mayo, y desde julio  se encuentra en pleno funcionamiento.  Con los datos obtenidos de este experimento se espera medir la radiación cósmica de fondo con mucha más precisión que su antecesor WMAP. También hay varios experimentos de física de neutrinos en marcha que esperan mejorar los datos actuales de oscilaciones de neutrinos.
+En el caso de supersimetría por ejemplo, todas las interacciones del
+modelo están especificadas por la simetría gauge y el superpotencial,
+que debe ser una función holomórfica de los campos escalares del
+modelo. En el modelo estándar supersimétrico, además de los términos
+del superpotencial que constituyen la semilla del potencial escalar y
+del Lagrangiano de Yukawa, la invarianza gauge permite los siguiente
+términos
+\begin{equation}
+  \label{eq:5}
+  W_{\cancel{R_p}} = \mu_i\widehat{L}_i\widehat{H}_u + 
+  \lambda_{i j k}\widehat{L}_i\widehat{L}_j\widehat{l}_k +
+  \lambda'_{i j k}\widehat{L}_i\widehat{Q}_j\widehat{d}_k + 
+  \lambda''_{ijk}\widehat{u}_i\widehat{d}_j\widehat{d}_k\,
+\end{equation}
+La simetría $Z_2$, conocida en éste caso como paridad R, $R_p$,
+prohíbe todos estos términos, y cuando la partícula impar bajo paridad
+R es el neutralino o el gravitino, ésta puede ser una candidato de
+materia oscura. Aunque se rompa paridad R y alguno de estos términos
+queden permitidos, el gravitino puede seguir siendo un candidato de
+materia oscura pues sus decaimientos están suprimidos por la escala de
+Planck. Para que el neutralino pueda ser materia oscura inestable
+cuando se rompe paridad R, se requiere que los acoplamientos sean
+extremadamente pequeños: del orden de $10^{-24}$ para los
+acoplamientos trilineales ${\lambda^{(\ }}'\;''{}^)$.
 
 
 \subsection{Justificación}
-En este proyecto queremos explorar modelos motivados por falencias 
+
+En el Grupo nos hemos enfocado en extensiones del modelo estándar que
+dan cuenta de las masas y mezclas de neutrinos. Hemos estudiado
+exhaustivamente las predicciones del modelo bilineal con ruptura de
+paridad R que incluye sólo los tres términos con $\mu_i$ del
+superpotencial en \eqref{eq:5}, tanto para el Tevatron como para el
+LHC asumiendo que el neutralino es la partícula supersimétrica más
+liviana (LSP de sus siglas en inglés)
+\cite{Magro:2003zb,deCampos:2005ri,deCampos:2008ic,deCampos:2008re,DeCampos:2010yu,deCampos:2007bn}. En
+el último trabajo al respecto hemos determinado el nivel de precisión
+con el que se puede llegar a medir en el LHC la correlación entre
+decaimientos de neutralinos a muón y tau con el ángulo de mezcla
+atmosférico de neutrinos: una predicción muy concreta que de no observarse en el LHC en los próximos años descartaría completamente el modelo como el mecanismo de generación de masas para neutrinos. 
+\begin{proyecto}
+  En este proyecto pretendemos seguir explorando más correlaciones de
+  éste tipo.
+\end{proyecto}
+
+Cuando el gravitino es la LSP además constituye un candidato viable de
+materia oscura inestable. Éste caso ha sido estudiado exhaustivamente
+en la literatura por sus implicaciones en experimentos de rayos
+cósmicos, especialmente en el caso en que las masas de neutrinos son
+explicadas a través del mecanismo de seesaw y el modelo también
+explica bariogénisis a través de leptogénesis. De hecho, como hemos
+mostramos en \cite{Choi:2010jt}, y ratificado por otro grupo con datos
+más recientes en \cite{Garny:2010eg}, los últimos datos de líneas de
+rayos gamma publicado por FERMI-LAT excluyen la posibilidad de que las
+masas de neutrinos puedan ser generadas por términos bilineales de
+ruptura de paridad R si la temperatura de recalentamiento es sobre
+$10^9\ $GeV como sugiere leptogénesis. En esta región del espacio de
+parámetros los acoplamientos bilineales son tan pequeños que el
+decaimiento del partícula siguiente a la LSP, la NLSP, ocurre fuera
+del detector en el LHC, por lo que el modelo es básicamente
+indistinguible del MSSM. En éste caso los datos de detección indirecta
+de materia oscura a través de rayos cósmicos serían la única forma de
+diferenciar el modelo del de supersimetría usual con conservación de
+paridad R y el neutralino como materia oscura, del modelo con ruptura
+bilineal de paridad R con el gravitino como materia oscura.  
+\begin{proyecto}
+  En esté proyecto queremos explorar las implicaciones que los datos
+  de líneas de rayos gammas tiene sobre el modelo de ruptura bilineal
+  de paridad R. Permitiendo temperaturas de recalentamiento de hasta 1
+  TeV, y relajando la hipótesis de universalidad en las masas de los
+  gauginos, usualmente hecha en estos análisis, queremos establecer
+  las regiones del espacio de parámetros donde es posible explicar los
+  datos de oscilaciones de neutrinos con los parámetros bilineales de
+  ruptura de paridad R. En éste caso las señales generadas por la
+  partícula próxima al LSP en el LHC podrían predecir señales muy
+  específicas en los experimentos de rayos cósmicos.
+\end{proyecto}
+
+
+La metodología desarrollada en el estudio exhaustivo del modelo con
+ruptura bilineal de paridad R la hemos logrado aplicar a otros modelos
+de generación radiativa de masas de neutrinos con nuevas partículas a
+la escala del TeV asequibles en el LHC
+\cite{Sierra:2008wj,AristizabalSierra:2006ri}. Recientemente hemos
+comenzado a explorar modelos que puedan dar cuenta simultáneamente de
+masas de neutrinos y candidatos de materia oscura
+\cite{Hirsch:2005ag,Choi:2010jt,Sierra:2008wj}. En el caso del seesaw
+radiativo por ejemplo, se implementa una simetría $Z_2$ de manera que
+un escalar o a un neutrino derecho puedan ser buenos candidatos de
+materia oscura. 
+\begin{proyecto}
+  En este proyecto queremos explorar más en detalle las implicaciones
+  fenomenológicas de éstos modelos.
+\end{proyecto}
+
+Nuestro grupo \cite{Nardi:2008ix} fue uno de los primeros en proponer
+una explicación en términos de materia oscura inestable para explicar
+el exceso de positrones observado por el satelite PAMELA en el
+2008\cite{Adriani:2008zr}. Luego hemos construido un modelo basado en
+supersimetría con ruptura de paridad R a través de términos
+trilineales del tipo $\lambda$ en la ec.~\eqref{eq:5}, para explicar
+la preferencia por decaimientos leptónicos de la partícula de materia
+oscura, que en este caso es el neutralino. Para ello se ha
+implementado una simetría horizontal que permite sólo la presencia de
+acoplamientos trilineales leptónicos \cite{Sierra:2009zq}. 
+\begin{proyecto}
+  En este proyecto queremos explorar la posibilidad de explicar
+  también las masas de neutrinos, y el gravitino como materia oscura
+  dentro de este modelo.
+\end{proyecto}
+ En un proyecto en marcha estamos explorando la posibilidad
+opuesta de un candidato de materia oscura que decae sólo
+hadrónicamente. La simetría horizontal garantiza que sólo los
+acoplamientos trilineales de quarks derechos estén
+permitidos. Finalmente hemos extendido el modelo para incluir masas de
+neutrinos. Ésta experiencia nos servirá para hacer las modificaciones
+necesarias al modelo con acoplamientos trilineales leptónicos del tipo
+$\lambda$ para dar cuenta de masas y mezclas para los neutrinos. 
+
+\begin{proyecto}
+  En términos generales, en este proyecto queremos explorar modelos
+  motivados por falencias fenomenológicas del modelo estándar,
+  especialmente aquellos modelos que no sólo tienen implicaciones en
+  el LHC, sino también en experimentos de detección de rayos cósmicos,
+  y experimentos de detección directa de materia oscura.
+\end{proyecto}
+
+
+%resumiendo tenemos
+%1. Correlaciones bilineal en el LHC
+%2  Restricciones en masa de neutrinos con gravitino LSP en el modelo bilineal.
+%3. Materia oscura con el seesaw radiativo.
+%4. modelo con lambda: gravitino y neutrinos derechos.
+
+
+\begin{proyecto}
+  Con base en lo planteado anteriormente, lo que proponemos en este
+  proyecto es tratar de responder la siguiente pregunta: ¿Cuáles
+  serían las restricciones impuestas por los recientes y futuros datos
+  de todos estos experimentos sobre modelos que presenten una
+  partícula candidata a materia oscura o que generen masas para los
+  neutrinos?
+\end{proyecto}
+
 
 
 
@@ -103,7 +341,7 @@ efectos de violación de sabor leptónico en procesos diferentes a la
 oscilación de neutrinos son extremadamente pequeños. Una alternativa al mecanismo seesaw que también explica naturalmente
 la pequeñez de la masa de neutrinos son los mecanismos de generación
 radiativa.
-%\cite{hep-ph/0503059,AristizabalSierra:2006ri,Babu:2002uu,Dong:2006vk}.
+%\cite{Hirsch:2005ag,AristizabalSierra:2006ri,Babu:2002uu,Dong:2006vk}.
 %En este aproximación las masas de neutrinos son cero a nivel árbol y
 %son inducidas únicamente como correcciones radiativas finitas.
 % Estas correcciones radiativas son proporcionales a la raíz cuadrada de
@@ -133,8 +371,6 @@ Todo esto representa un escenario muy dinámico donde el Grupo debe estar prepar
 
 
 
-
-\textbf{Comentar sobre la linea de rayos gamma \cite{1011.3786}}
 \subsection{Planteamiento del problema}
 \begin{instrucciones}
   ¿Están vinculados con el problema planteado? ¿Son viables, claros, concretos y factibles, de acuerdo con el estudio y los métodos?
