--- a/Resultados.tex
+++ b/Resultados.tex
@@ -1,8 +1,12 @@
 \section{ Resultados Esperados }
 \begin{instrucciones}
-  Formule los resultados directos verificables que se
+CODI:  Impacto y relevancia:
+¿El proyecto permite la generación de conocimiento científico o aporta a la resolución de problemas concretos de la realidad? ¿Son suficientes y adecuados los mecanismos de comunicación y socialización de resultados? 
+
+ COLCI: Formule los resultados directos verificables que se
 alcanzarán con el desarrollo de los objetivos específicos del proyecto. Estos deben ser coherentes
 con los objetivos y con la metodología planteada.
+
 
 
   \begin{enumerate}
