--- a/Planteamiento_del_Problema.tex
+++ b/Planteamiento_del_Problema.tex
@@ -1,21 +1,33 @@
 \section{Planteamiento del Problema }
 \begin{instrucciones}
-  CODI: ¿Está bien definido el problema que se quiere investigar? ¿Es clara su justificación desde el punto de vista académico, científico, tecnológico, social, económico y legal? (15).
+  CODI: 
+
+  * ¿Está bien definido el problema que se quiere investigar?:
+  Fenomenología de modelos más allá del ME motivados por evidencias
+  fenomenológicas del ME.  
+  * ¿Es clara su justificación desde el punto de vista académico,
+  científico, tecnológico, social, económico y legal? (15).
+  científico: contribuir a la correspondiente rama del conocimiento
 
   COLCI: en este ítem usted deberá describir de forma precisa y completa la
-  naturaleza y magnitud del problema de investigación que se quiere
-  abordar. Formule claramente las preguntas concretas a las cuales se
+  
+  * naturaleza y magnitud del problema de investigación que se quiere
+  abordar:
+  ** Construir modelos nuevos.
+  ** Explorar modelos existentes.
+  Formule claramente las preguntas concretas a las cuales se
   quiere responder en el contexto del problema planteado.
 \end{instrucciones}
 %Tesis
 El modelo estándar de las interacciones fundamentales ha sido muy
 exitoso durante las últimas décadas para explicar la mayoría de los
 resultados experimentales de física de altas energías. Sin embargo,
-simultáneamente se ha venido acumulando evidencia experimental que
+paralelamente se ha venido acumulando evidencia experimental que
 requiere extender el modelo estándar con nuevas partículas. En la
 actualidad hay un gran esfuerzo experimental para explorar en detalle
 todas esas posibilidades. Estamos ahora en una época de efervescencia
-experimental con detectores de partículas instalados desde las alturas
+experimental con detectores de p
+artículas instalados desde las alturas
 de satelites artificiales, hasta las profundidades de laboratorios
 subterráneos a kilometros de profundidad. 
 
@@ -37,21 +49,25 @@ gamma por parte de Fermi--LAT, las cuales pueden ayudar a discernir si
 el origen de las anomalías detectadas en electrones y positrones es
 debida a fuentes astrofísicas como pulsares cercanos, o a la
 aniquilación o el decaimiento de materia oscura. El detector de rayos
-cósmicos AMS-02~\cite{ams:2009}, que será instalado en la estación
-espacial internacional, medirá el espectro de antiprotones y
-positrones en un rango de energía mucho más amplio y con una
-estadística mucho mejor.  
+cósmicos AMS-02~\cite{ams:2009}, ya se encuentra en el transbordador
+Endeavour para su próxima misión programada para el 29 de abril, para
+será instalado en la estación espacial internacional. Éste medirá el
+espectro de antiprotones y positrones en un rango de energía mucho más
+amplio y con una estadística mucho mejor.
 
-El satélite Planck fue lanzado en mayo, y
-desde julio se encuentra en pleno funcionamiento.  Con los datos
-obtenidos de este experimento se espera medir la radiación cósmica de
-fondo con mucha más precisión que su antecesor WMAP. 
+El satélite Planck fue lanzado en mayo, y desde julio se encuentra en
+pleno funcionamiento.  Con los datos obtenidos de este experimento se
+espera medir la radiación cósmica de fondo con mucha más precisión que
+su antecesor WMAP.
 
 %hablar sobre XENON basado en la discusión de 1104.3572
 Los experimentos de detección directa de materia oscura instalados en
-laboratorios subterráneos como XENON100 \cite{1104.3121}, han comenzado a explorar las
-regiones predichas por algunos de los modelos más estudiados de
-materia oscura. Para los próximos años se espera cubrir todo el espacio de parámetros para materia oscura del modelo estándar supersimétrico mínimo restringido (Constrained MSSM de sus siglas en Inglés)
+laboratorios subterráneos como XENON100 \cite{1104.3121}, han
+comenzado a explorar las regiones predichas por algunos de los modelos
+más estudiados de materia oscura. Para los próximos años se espera
+cubrir todo el espacio de parámetros para materia oscura del modelo
+estándar supersimétrico mínimo restringido (Constrained MSSM de sus
+siglas en Inglés).
 
 Finalmente hay varios experimentos de física de neutrinos en marcha
 que esperan mejorar los datos actuales de oscilaciones de neutrinos.
@@ -72,7 +88,7 @@ sólo es posible dar cuenta de la pequeñez de sus masas con respecto a
 la de los otros fermiones, sino también, hacer predicciones muy
 concretas en aceleradores de partículas, como el LHC. Aún en el caso
 de modelos tan estudiados de este tipo, como es el caso del modelo
-supersimétrico con violación bilineal de paridad R, quedan muchos
+supersimétrico con ruptura bilineal de paridad R, quedan muchos
 aspectos que explorar.
 
 %evidencia 2
@@ -104,8 +120,8 @@ implica que en algún momento grandes cantidades de materia y
 antimateria se aniquilaron dejando el pequeño exceso de materia que
 constituye el Universo observable actual. El problema de explicar el
 exceso inicial de materia sobre antimateria se conoce con el nombre de
-bariogénesis. Con el modelo estándar no es posible explicar
-bariogénesis.
+bariogénesis. Dentro del modelo estándar, aunque contiene los
+ingredientes necesarios, no es posible explicar bariogénesis.
 
 %conclusion
 Un modelo ideal sería uno que de cuenta de las masas y mezclas de
@@ -135,10 +151,11 @@ buen candidato de materia oscura. En el programa computacional
 microMEGAS~\cite{Belanger:2006is} se puede implementar cualquier
 extensión del modelo estándar que posea una simetría $Z_2$ para
 calcular numéricamente la densidad de reliquia de materia oscura y la
-sección eficaz WIMP--nucleón, relevante para los experimentos de
-búsquedas directas. Cuando la partícula de materia oscura es inestable
-se requiere de alguna simetría para garantizar que su acoplamiento a
-las partículas del modelo estándar esté suficientemente suprimido. 
+sección eficaz WIMP--nucleón, relevante para los experimentos de de
+detección directa como XENON100. Cuando la partícula de materia oscura
+es inestable se requiere de alguna simetría para garantizar que su
+acoplamiento a las partículas del modelo estándar esté suficientemente
+suprimido.
 
 En el caso de supersimetría por ejemplo, todas las interacciones del
 modelo están especificadas por la simetría gauge y el superpotencial,
@@ -170,19 +187,27 @@ acoplamientos trilineales ${\lambda^{(\ }}'\;''{}^)$.
 
 En el Grupo nos hemos enfocado en extensiones del modelo estándar que
 dan cuenta de las masas y mezclas de neutrinos. Hemos estudiado
-exhaustivamente las predicciones del modelo bilineal con ruptura de
+exhaustivamente las predicciones del modelo  con ruptura bilineal de
 paridad R que incluye sólo los tres términos con $\mu_i$ del
 superpotencial en \eqref{eq:5}, tanto para el Tevatron como para el
 LHC asumiendo que el neutralino es la partícula supersimétrica más
 liviana (LSP de sus siglas en inglés)
-\cite{Magro:2003zb,deCampos:2005ri,deCampos:2008ic,deCampos:2008re,DeCampos:2010yu,deCampos:2007bn}. En
+\cite{Magro:2003zb,deCampos:2005ri,deCampos:2007bn,deCampos:2008ic,deCampos:2008re,DeCampos:2010yu}. En
 el último trabajo al respecto hemos determinado el nivel de precisión
 con el que se puede llegar a medir en el LHC la correlación entre
 decaimientos de neutralinos a muón y tau con el ángulo de mezcla
-atmosférico de neutrinos: una predicción muy concreta que de no observarse en el LHC en los próximos años descartaría completamente el modelo como el mecanismo de generación de masas para neutrinos. 
+atmosférico de neutrinos: una predicción muy concreta que de no
+observarse en el LHC en los próximos años descartaría completamente el
+modelo como el mecanismo de generación de masas para neutrinos.
 \begin{proyecto}
   En este proyecto pretendemos seguir explorando más correlaciones de
-  éste tipo.
+  de observables en el LHC con física de neutrinos para determinar con
+  que nivel de precisión se podrían llegar a medir en el LHC. Cuando
+  el neutralino es la LSP, los decaimientos a tres cuerpos mediados
+  por sfermiones con muones y electrones en los estados finales, están
+  correlaciones con el ángulo de mezcla solar, y la longitud de
+  decaimiento del neutralino está correlacionada con la diferencia de
+  masa atmosférica.
 \end{proyecto}
 
 Cuando el gravitino es la LSP además constituye un candidato viable de
@@ -204,18 +229,24 @@ indistinguible del MSSM. En éste caso los datos de detección indirecta
 de materia oscura a través de rayos cósmicos serían la única forma de
 diferenciar el modelo del de supersimetría usual con conservación de
 paridad R y el neutralino como materia oscura, del modelo con ruptura
-bilineal de paridad R con el gravitino como materia oscura.  
+bilineal de paridad R con el gravitino como materia oscura.  En un
+proyecto paralelo, liderado por un investigador asociado al grupo,
+queremos explorar las implicaciones que los datos de líneas de rayos
+gammas tiene sobre el modelo de ruptura bilineal de paridad
+R. Permitiendo temperaturas de recalentamiento hasta de 1 TeV, y
+relajando la hipótesis de universalidad en las masas de los gauginos,
+usualmente hecha en estos análisis, queremos establecer las regiones
+del espacio de parámetros donde es posible explicar los datos de
+oscilaciones de neutrinos con los parámetros de ruptura bilineal de
+paridad R. En éste caso las señales generadas por la partícula próxima
+al LSP en el LHC podrían predecir señales muy específicas en los
+experimentos de rayos cósmicos.
 \begin{proyecto}
-  En esté proyecto queremos explorar las implicaciones que los datos
-  de líneas de rayos gammas tiene sobre el modelo de ruptura bilineal
-  de paridad R. Permitiendo temperaturas de recalentamiento de hasta 1
-  TeV, y relajando la hipótesis de universalidad en las masas de los
-  gauginos, usualmente hecha en estos análisis, queremos establecer
-  las regiones del espacio de parámetros donde es posible explicar los
-  datos de oscilaciones de neutrinos con los parámetros bilineales de
-  ruptura de paridad R. En éste caso las señales generadas por la
-  partícula próxima al LSP en el LHC podrían predecir señales muy
-  específicas en los experimentos de rayos cósmicos.
+  En este proyecto realizaremos las simulaciones de las señales del
+  NSLP para el LHC cuando el gravitino es la LSP en las regiones del
+  espacio de parámetros donde el gravitinos es un buen candidato a
+  materia oscura y los términos bilineales explican los datos de
+  oscilaciones de neutrinos. 
 \end{proyecto}
 
 
@@ -228,17 +259,34 @@ comenzado a explorar modelos que puedan dar cuenta simultáneamente de
 masas de neutrinos y candidatos de materia oscura
 \cite{Hirsch:2005ag,Choi:2010jt,Sierra:2008wj}. En el caso del seesaw
 radiativo por ejemplo, se implementa una simetría $Z_2$ de manera que
-un escalar o a un neutrino derecho puedan ser buenos candidatos de
-materia oscura. 
+la masa de neutrinos sólo pueda ser generada radiativamente con los
+neutrinos derechos a la escala del TeV garantizando que el modelo
+pueda comprobarse en el LHC. La misma simetría garantiza que el
+escalar o a un neutrino derecho puedan ser buenos candidatos de
+materia oscura. Finalmente, la estructura escalar del modelo permite
+tener el Higgs mucho más pesado que en el modelo estándar de forma
+compatible con las correcciones electrodébiles. 
+% Las regiones del modelo en la cual la partícula de materia oscura es
+% escalar ha sido bastante estudiada en la literatura en el contexto
+% del modelo conocido como doblete inerte \cite{1011.1411}. Sin
+% embargo, las regiones en las cuales el neutrino derecho es el
+% candidato de materia oscura todavía requieren de
 \begin{proyecto}
-  En este proyecto queremos explorar más en detalle las implicaciones
-  fenomenológicas de éstos modelos.
+  Todo esto hace muy llamativo el estudio de las señales del seesaw
+  radiativo para el LHC, y en los experimentos de detección directa de
+  materia oscura. En este proyecto pretendemos establecer todas las
+  regiones del espacio de parámetros donde se puede tener la densidad
+  de reliquia de materia oscura y las masas y mezclas de neutrinos
+  adecuadas. En cada región se establecerán las señales que se esperan
+  en el LHC y en experimentos de detección directa de materia oscura,
+  y para las señales más representativas hacer simulaciones para el
+  detector ATLAS del LHC.
 \end{proyecto}
 
 Nuestro grupo \cite{Nardi:2008ix} fue uno de los primeros en proponer
 una explicación en términos de materia oscura inestable para explicar
 el exceso de positrones observado por el satelite PAMELA en el
-2008\cite{Adriani:2008zr}. Luego hemos construido un modelo basado en
+2008 \cite{Adriani:2008zr}. Luego hemos construido un modelo basado en
 supersimetría con ruptura de paridad R a través de términos
 trilineales del tipo $\lambda$ en la ec.~\eqref{eq:5}, para explicar
 la preferencia por decaimientos leptónicos de la partícula de materia
@@ -248,7 +296,8 @@ acoplamientos trilineales leptónicos \cite{Sierra:2009zq}.
 \begin{proyecto}
   En este proyecto queremos explorar la posibilidad de explicar
   también las masas de neutrinos, y el gravitino como materia oscura
-  dentro de este modelo.
+  en el marco del modelo con ruptura de paridad R a través de términos
+  trilineales del tipo $\lambda$.
 \end{proyecto}
  En un proyecto en marcha estamos explorando la posibilidad
 opuesta de un candidato de materia oscura que decae sólo
@@ -258,6 +307,8 @@ permitidos. Finalmente hemos extendido el modelo para incluir masas de
 neutrinos. Ésta experiencia nos servirá para hacer las modificaciones
 necesarias al modelo con acoplamientos trilineales leptónicos del tipo
 $\lambda$ para dar cuenta de masas y mezclas para los neutrinos. 
+
+
 
 \begin{proyecto}
   En términos generales, en este proyecto queremos explorar modelos
@@ -279,9 +330,9 @@ $\lambda$ para dar cuenta de masas y mezclas para los neutrinos.
   Con base en lo planteado anteriormente, lo que proponemos en este
   proyecto es tratar de responder la siguiente pregunta: ¿Cuáles
   serían las restricciones impuestas por los recientes y futuros datos
-  de todos estos experimentos sobre modelos que presenten una
-  partícula candidata a materia oscura o que generen masas para los
-  neutrinos?
+  de los experimentos de física de partículas sobre modelos que
+  presenten una partícula candidata a materia oscura o que generen
+  masas para los neutrinos?
 \end{proyecto}
 
 
